--- a/earthrdp.ini
+++ b/earthrdp.ini
@@ -1,6 +1,6 @@
 [Main]
-Updated=2021-01-14
-LogFile=\rdpwrap.txt
+Updated=2021-02-07
+LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
 
