--- a/earthrdp.ini
+++ b/earthrdp.ini
@@ -7216,3 +7216,23 @@ bRemoteConnAllowed.x64=11DEB4
 bMultimonAllowed.x64  =11DEB8
 ulMaxDebugSessions.x64=11DEC0
 bFUSEnabled.x64       =11DEC4
+
+[10.0.21296.1000-SLInit]
+bInitialized.x64      =11DE9C
+bServerSku.x64        =11DEA0
+lMaxUserSessions.x64  =11DEA4
+bAppServerAllowed.x64 =11DEAC
+bRemoteConnAllowed.x64=11DEB4
+bMultimonAllowed.x64  =11DEB8
+ulMaxDebugSessions.x64=11DEC0
+bFUSEnabled.x64       =11DEC4
+
+[10.0.21301.1000-SLInit]
+bInitialized.x64      =11DE9C
+bServerSku.x64        =11DEA0
+lMaxUserSessions.x64  =11DEA4
+bAppServerAllowed.x64 =11DEAC
+bRemoteConnAllowed.x64=11DEB4
+bMultimonAllowed.x64  =11DEB8
+ulMaxDebugSessions.x64=11DEC0
+bFUSEnabled.x64       =11DEC4
