--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,5 +1,5 @@
 [Main]
-Updated=2021-02-07
+Updated=2021-05-11
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1091,6 +1091,20 @@ SLInitOffset.x86=3FA58
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=249D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.10240.18818]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=95E91
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18274
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=0F0C5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=254F0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.10586.0]
@@ -3572,6 +3586,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22F5C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17134.1967]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=91BD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=17CEC
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BC38
+DefPolicyCode.x64=CDefPolicy_Query_edi_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2328C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.17723.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=75D91
@@ -3975,6 +4003,62 @@ DefPolicyOffset.x64=18A15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1D5BC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.782]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=88F41
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1D5BC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.789]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=88F41
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CA4C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1D5BC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.962]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89F31
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CB22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E29C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.964]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89F31
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CB22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E29C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19613.1000]
@@ -4439,6 +4523,90 @@ SLInitHook.x64=1
 SLInitOffset.x64=22780
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.21296.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97251
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0859C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B925
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22780
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21301.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97251
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0859C
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B925
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22780
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21313.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97371
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08672
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B925
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22780
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21332.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97511
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08772
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA25
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22AD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21359.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=986F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21370.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=986F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -4783,6 +4951,16 @@ bInitialized.x64      =F3464
 bMultimonAllowed.x64  =F3468
 ulMaxDebugSessions.x64=F346C
 bRemoteConnAllowed.x64=F3470
+
+[10.0.10240.18818-SLInit]
+lMaxUserSessions.x64  =F13B0
+bAppServerAllowed.x64 =F13B4
+bServerSku.x64        =F13B8
+bFUSEnabled.x64       =F2460
+bInitialized.x64      =F2464
+bMultimonAllowed.x64  =F2468
+ulMaxDebugSessions.x64=F246C
+bRemoteConnAllowed.x64=F2470
 
 [10.0.10586.0-SLInit]
 bFUSEnabled.x86       =C3F60
@@ -6597,6 +6775,16 @@ bMultimonAllowed.x64  =F2438
 ulMaxDebugSessions.x64=F243C
 bFUSEnabled.x64       =F2440
 
+[10.0.17134.1967-SLInit]
+bServerSku.x64        =F0378
+lMaxUserSessions.x64  =F037C
+bAppServerAllowed.x64 =F0380
+bInitialized.x64      =F1430
+bRemoteConnAllowed.x64=F1434
+bMultimonAllowed.x64  =F1438
+ulMaxDebugSessions.x64=F143C
+bFUSEnabled.x64       =F1440
+
 [10.0.17723.1000-SLInit]
 bInitialized.x64      =E9AB0
 bServerSku.x64        =E9AB4
@@ -6886,6 +7074,46 @@ bRemoteConnAllowed.x64=106040
 bMultimonAllowed.x64  =106044
 ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
+
+[10.0.19041.782-SLInit]
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =106044
+ulMaxDebugSessions.x64=106048
+bFUSEnabled.x64       =10604C
+
+[10.0.19041.789-SLInit]
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =106044
+ulMaxDebugSessions.x64=106048
+bFUSEnabled.x64       =10604C
+
+[10.0.19041.962-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.964-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
 
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
@@ -7236,3 +7464,43 @@ bRemoteConnAllowed.x64=11DEB4
 bMultimonAllowed.x64  =11DEB8
 ulMaxDebugSessions.x64=11DEC0
 bFUSEnabled.x64       =11DEC4
+
+[10.0.21313.1000-SLInit]
+bInitialized.x64      =11DE9C
+bServerSku.x64        =11DEA0
+lMaxUserSessions.x64  =11DEA4
+bAppServerAllowed.x64 =11DEAC
+bRemoteConnAllowed.x64=11DEB4
+bMultimonAllowed.x64  =11DEB8
+ulMaxDebugSessions.x64=11DEC0
+bFUSEnabled.x64       =11DEC4
+
+[10.0.21332.1000-SLInit]
+bInitialized.x64      =11DE9C
+bServerSku.x64        =11DEA0
+lMaxUserSessions.x64  =11DEA4
+bAppServerAllowed.x64 =11DEAC
+bRemoteConnAllowed.x64=11DEB4
+bMultimonAllowed.x64  =11DEB8
+ulMaxDebugSessions.x64=11DEC0
+bFUSEnabled.x64       =11DEC4
+
+[10.0.21359.1-SLInit]
+bInitialized.x64      =11EECC
+bServerSku.x64        =11EED0
+lMaxUserSessions.x64  =11EED4
+bAppServerAllowed.x64 =11EEDC
+bRemoteConnAllowed.x64=11EEE4
+bMultimonAllowed.x64  =11EEE8
+ulMaxDebugSessions.x64=11EEF0
+bFUSEnabled.x64       =11EEF4
+
+[10.0.21370.1-SLInit]
+bInitialized.x64      =11EECC
+bServerSku.x64        =11EED0
+lMaxUserSessions.x64  =11EED4
+bAppServerAllowed.x64 =11EEDC
+bRemoteConnAllowed.x64=11EEE4
+bMultimonAllowed.x64  =11EEE8
+ulMaxDebugSessions.x64=11EEF0
+bFUSEnabled.x64       =11EEF4
