--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,5 +1,5 @@
 [Main]
-Updated=2021-05-11
+Updated=2021-06-17
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3828,6 +3828,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=21A3C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.1971]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=77B51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=134B9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18075
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1AD9C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18362.1]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B7A16
@@ -4059,6 +4073,20 @@ DefPolicyOffset.x64=18A15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1E29C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1023]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89C51
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0CB22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18A15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1DFDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19613.1000]
@@ -4579,6 +4607,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22AD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.21343.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=986F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25850
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21359.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=986F1
@@ -4605,6 +4647,62 @@ DefPolicyOffset.x64=1BB75
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21376.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=986F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21382.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=986F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=25900
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21387.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98C11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26AD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.21390.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98C11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26AD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -6948,6 +7046,16 @@ bMultimonAllowed.x64  =0F3BA4
 ulMaxDebugSessions.x64=0F3BA8
 bFUSEnabled.x64       =0F3BAC
 
+[10.0.17763.1971-SLInit]
+bInitialized.x64      =ECAB4
+bServerSku.x64        =ECAB8
+lMaxUserSessions.x64  =ECABC
+bAppServerAllowed.x64 =ECAC4
+bRemoteConnAllowed.x64=ECAC8
+bMultimonAllowed.x64  =ECACC
+ulMaxDebugSessions.x64=ECAD0
+bFUSEnabled.x64       =ECAD4
+
 [10.0.18362.1-SLInit]
 bInitialized.x86      =D477C
 bServerSku.x86        =D4780
@@ -7106,6 +7214,16 @@ ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
 
 [10.0.19041.964-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1023-SLInit]
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
@@ -7485,6 +7603,16 @@ bMultimonAllowed.x64  =11DEB8
 ulMaxDebugSessions.x64=11DEC0
 bFUSEnabled.x64       =11DEC4
 
+[10.0.21343.1000-SLInit]
+bInitialized.x64      =11EECC
+bServerSku.x64        =11EED0
+lMaxUserSessions.x64  =11EED4
+bAppServerAllowed.x64 =11EEDC
+bRemoteConnAllowed.x64=11EEE4
+bMultimonAllowed.x64  =11EEE8
+ulMaxDebugSessions.x64=11EEF0
+bFUSEnabled.x64       =11EEF4
+
 [10.0.21359.1-SLInit]
 bInitialized.x64      =11EECC
 bServerSku.x64        =11EED0
@@ -7504,3 +7632,43 @@ bRemoteConnAllowed.x64=11EEE4
 bMultimonAllowed.x64  =11EEE8
 ulMaxDebugSessions.x64=11EEF0
 bFUSEnabled.x64       =11EEF4
+
+[10.0.21376.1-SLInit]
+bInitialized.x64      =11EECC
+bServerSku.x64        =11EED0
+lMaxUserSessions.x64  =11EED4
+bAppServerAllowed.x64 =11EEDC
+bRemoteConnAllowed.x64=11EEE4
+bMultimonAllowed.x64  =11EEE8
+ulMaxDebugSessions.x64=11EEF0
+bFUSEnabled.x64       =11EEF4
+
+[10.0.21382.1-SLInit]
+bInitialized.x64      =11EECC
+bServerSku.x64        =11EED0
+lMaxUserSessions.x64  =11EED4
+bAppServerAllowed.x64 =11EEDC
+bRemoteConnAllowed.x64=11EEE4
+bMultimonAllowed.x64  =11EEE8
+ulMaxDebugSessions.x64=11EEF0
+bFUSEnabled.x64       =11EEF4
+
+[10.0.21387.1-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
+[10.0.21390.1-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
