--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,8 +1,10 @@
 [Main]
-Updated=2021-06-25
+Updated=2021-08-02
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
+
+
 
 [SLPolicy]
 TerminalServices-RemoteConnectionManager-AllowRemoteConnections=1
@@ -4733,7 +4735,23 @@ SLInitHook.x64=1
 SLInitOffset.x64=26AD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+; Windows 11
+
 [10.0.21996.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98C11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26AD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=98C11
 LocalOnlyCode.x64=jmpshort
@@ -7736,6 +7754,16 @@ ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
 [10.0.21996.1-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
+[10.0.22000.1-SLInit]
 bInitialized.x64      =11FECC
 bServerSku.x64        =11FED0
 lMaxUserSessions.x64  =11FED4
