--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,9 +1,8 @@
 [Main]
-Updated=2021-08-02
+Updated=2021-08-26
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
-
 
 
 [SLPolicy]
@@ -4539,6 +4538,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22530
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.143]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97231
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08A32
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B7A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22600
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21277.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=96FD1
@@ -7612,6 +7625,16 @@ bRemoteConnAllowed.x64=11EEB4
 bMultimonAllowed.x64  =11EEB8
 ulMaxDebugSessions.x64=11EEC0
 bFUSEnabled.x64       =11EEC4
+
+[10.0.20348.143-SLInit]
+bInitialized.x64      =11EEAC
+bServerSku.x64        =11EEB0
+lMaxUserSessions.x64  =11EEB4
+bAppServerAllowed.x64 =11EEBC
+bRemoteConnAllowed.x64=11EEC4
+bMultimonAllowed.x64  =11EEC8
+ulMaxDebugSessions.x64=11EED0
+bFUSEnabled.x64       =11EED4
 
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
