--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,9 +1,11 @@
+; Earth Terminal Kitaplığı
+
+
 [Main]
-Updated=2021-08-26
+Updated=2021-08-29
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
-
 
 [SLPolicy]
 TerminalServices-RemoteConnectionManager-AllowRemoteConnections=1
@@ -4118,6 +4120,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1E98C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1200]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=89D81
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D212
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=19105
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E98C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8FA01
@@ -7317,6 +7333,16 @@ ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
 
 [10.0.19041.1081-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
+[10.0.19041.1200-SLInit]
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
 lMaxUserSessions.x64  =107110
