--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
-
+; Earth Terminal Kitaplığı
 
 [Main]
-Updated=2021-09-04
+Updated=2021-09-05
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
