--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
-; Earth Terminal Kitaplığı
+
 
 [Main]
-Updated=2021-09-05
+Updated=2021-09-06
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3683,28 +3683,28 @@ SLInitOffset.x64=1ABFC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.17763.288]
-Patch CEnforcementCore::GetInstanceOfTSLicense
+; Patch CEnforcementCore::GetInstanceOfTSLicense
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=AFAD4
 LocalOnlyCode.x86=jmpshort
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=77A11
 LocalOnlyCode.x64=jmpshort
-Patch CSessionArbitrationHelper::IsSingleSessionPerUserEnabled
+; Patch CSessionArbitrationHelper::IsSingleSessionPerUserEnabled
 SingleUserPatch.x86=1
 SingleUserOffset.x86=4D665
 SingleUserCode.x86=nop
 SingleUserPatch.x64=1
 SingleUserOffset.x64=1322C
 SingleUserCode.x64=Zero
-Patch CDefPolicy::Query
+; Patch CDefPolicy::Query
 DefPolicyPatch.x86=1
 DefPolicyOffset.x86=4BE69
 DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 DefPolicyPatch.x64=1
 DefPolicyOffset.x64=17F45
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
-Hook CSLQuery::Initialize
+; Hook CSLQuery::Initialize
 SLInitHook.x86=1
 SLInitOffset.x86=5B18A
 SLInitFunc.x86=New_CSLQuery_Initialize
@@ -4805,6 +4805,20 @@ DefPolicyOffset.x64=1BB75
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=26AD0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22449.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97DD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=19152
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BC45
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=270A0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -7844,3 +7858,13 @@ bRemoteConnAllowed.x64=11FEE4
 bMultimonAllowed.x64  =11FEE8
 ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
+
+[10.0.22449.1000-SLInit]
+bInitialized.x64      =11FF0C
+bServerSku.x64        =11FF10
+lMaxUserSessions.x64  =11FF14
+bAppServerAllowed.x64 =11FF1C
+bRemoteConnAllowed.x64=11FF24
+bMultimonAllowed.x64  =11FF28
+ulMaxDebugSessions.x64=11FF30
+bFUSEnabled.x64       =11FF34
