--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
-; Earth Telekom Terminal Kitaplığı
+; Earth Terminal Server Kitaplığı
 
 [Main]
-Updated=2021-09-14
+Updated=2021-09-16
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3979,6 +3979,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.18362.1766]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=83075
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DD19
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FE65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22E9C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18963.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=88C91
@@ -4817,6 +4831,20 @@ SLInitOffset.x64=26AD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22449.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97DD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=19152
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BC45
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=270A0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22454.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=97DD1
 LocalOnlyCode.x64=jmpshort
@@ -7278,6 +7306,16 @@ bMultimonAllowed.x64  =F6AA4
 ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64       =F6AAC
 
+[10.0.18362.1766-SLInit]
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64  =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64       =F6AAC
+
 [10.0.18963.1000-SLInit]
 bInitialized.x64      =102DD8
 bServerSku.x64        =102DDC
@@ -7877,6 +7915,16 @@ ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
 [10.0.22449.1000-SLInit]
+bInitialized.x64      =11FF0C
+bServerSku.x64        =11FF10
+lMaxUserSessions.x64  =11FF14
+bAppServerAllowed.x64 =11FF1C
+bRemoteConnAllowed.x64=11FF24
+bMultimonAllowed.x64  =11FF28
+ulMaxDebugSessions.x64=11FF30
+bFUSEnabled.x64       =11FF34
+
+[10.0.22454.1000-SLInit]
 bInitialized.x64      =11FF0C
 bServerSku.x64        =11FF10
 lMaxUserSessions.x64  =11FF14
