--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
-; Earth Terminal Server Kitaplığı
+; EArth Terminal Server Kitaplığı
 
 [Main]
-Updated=2021-09-16
+Updated=2021-09-18
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4858,6 +4858,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=270A0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22458.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97DB1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=19172
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BC65
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=270C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -7933,3 +7947,13 @@ bRemoteConnAllowed.x64=11FF24
 bMultimonAllowed.x64  =11FF28
 ulMaxDebugSessions.x64=11FF30
 bFUSEnabled.x64       =11FF34
+
+[10.0.22458.1000-SLInit]
+bInitialized.x64      =11FF1C
+bServerSku.x64        =11FF20
+lMaxUserSessions.x64  =11FF24
+bAppServerAllowed.x64 =11FF2C
+bRemoteConnAllowed.x64=11FF34
+bMultimonAllowed.x64  =11FF38
+ulMaxDebugSessions.x64=11FF40
+bFUSEnabled.x64       =11FF44
