--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
-; Earth Terminal Server Kitaplığı
+; Earth Terminal Server
 
 [Main]
-Updated=2021-09-18
+Updated=2021-09-28
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3844,6 +3844,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1AD9C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.2213]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=7E281
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=13619
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=181D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2148C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18362.1]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=B7A16
@@ -4870,6 +4884,20 @@ DefPolicyOffset.x64=1BC65
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=270C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22463.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99141
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=192C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BDB5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=27590
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -7223,6 +7251,16 @@ bMultimonAllowed.x64  =ECACC
 ulMaxDebugSessions.x64=ECAD0
 bFUSEnabled.x64       =ECAD4
 
+[10.0.17763.2213-SLInit]
+bInitialized.x64      =F3AC4
+bServerSku.x64        =F3AC8
+lMaxUserSessions.x64  =F3ACC
+bAppServerAllowed.x64 =F3AD4
+bRemoteConnAllowed.x64=F3AD8
+bMultimonAllowed.x64  =F3ADC
+ulMaxDebugSessions.x64=F3AE0
+bFUSEnabled.x64       =F3AE4
+
 [10.0.18362.1-SLInit]
 bInitialized.x86      =D477C
 bServerSku.x86        =D4780
@@ -7957,3 +7995,13 @@ bRemoteConnAllowed.x64=11FF34
 bMultimonAllowed.x64  =11FF38
 ulMaxDebugSessions.x64=11FF40
 bFUSEnabled.x64       =11FF44
+
+[10.0.22463.1000-SLInit]
+bInitialized.x64      =121F2C
+bServerSku.x64        =121F30
+lMaxUserSessions.x64  =121F34
+bAppServerAllowed.x64 =121F3C
+bRemoteConnAllowed.x64=121F44
+bMultimonAllowed.x64  =121F48
+ulMaxDebugSessions.x64=121F50
+bFUSEnabled.x64       =121F54
