--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
 ; Earth Terminal Server
 
 [Main]
-Updated=2021-09-28
+Updated=2021-10-05
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -3816,6 +3816,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1ACDC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.1369]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=77AD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=13469
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=18025
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1ACDC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.17763.1697]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=7E421
@@ -4618,6 +4632,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22600
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.261]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97561
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08A32
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B7A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22910
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21277.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=96FD1
@@ -4898,6 +4926,34 @@ DefPolicyOffset.x64=1BDB5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=27590
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22468.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99271
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=193F2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BEE5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=276C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22471.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99271
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=193F2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BEE5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=276C0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -7222,14 +7278,15 @@ bMultimonAllowed.x86  =CD7B4
 ulMaxDebugSessions.x86=CD7B8
 bFUSEnabled.x86       =CD7BC
 
-bServerSku.x64        =ECAB8
-lMaxUserSessions.x64  =ECABC
-bAppServerAllowed.x64 =ECAC4
-bInitialized.x64      =ECAB4
-bRemoteConnAllowed.x64=ECAC8
-bMultimonAllowed.x64  =ECACC
-ulMaxDebugSessions.x64=ECAD0
-bFUSEnabled.x64       =ECAD4
+[10.0.17763.1369-SLInit]
+bInitialized.x64      =0ECAB4
+bServerSku.x64        =0ECAB8
+lMaxUserSessions.x64  =0ECABC
+bAppServerAllowed.x64 =0ECAC4
+bRemoteConnAllowed.x64=0ECAC8
+bMultimonAllowed.x64  =0ECACC
+ulMaxDebugSessions.x64=0ECAD0
+bFUSEnabled.x64       =0ECAD4
 
 [10.0.17763.1697-SLInit]
 bInitialized.x64      =0F3B8C
@@ -7806,6 +7863,16 @@ bMultimonAllowed.x64  =11EEC8
 ulMaxDebugSessions.x64=11EED0
 bFUSEnabled.x64       =11EED4
 
+[10.0.20348.261-SLInit]
+bInitialized.x64      =11EEAC
+bServerSku.x64        =11EEB0
+lMaxUserSessions.x64  =11EEB4
+bAppServerAllowed.x64 =11EEBC
+bRemoteConnAllowed.x64=11EEC4
+bMultimonAllowed.x64  =11EEC8
+ulMaxDebugSessions.x64=11EED0
+bFUSEnabled.x64       =11EED4
+
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
 bServerSku.x64        =11EEA0
@@ -7997,6 +8064,26 @@ ulMaxDebugSessions.x64=11FF40
 bFUSEnabled.x64       =11FF44
 
 [10.0.22463.1000-SLInit]
+bInitialized.x64      =121F2C
+bServerSku.x64        =121F30
+lMaxUserSessions.x64  =121F34
+bAppServerAllowed.x64 =121F3C
+bRemoteConnAllowed.x64=121F44
+bMultimonAllowed.x64  =121F48
+ulMaxDebugSessions.x64=121F50
+bFUSEnabled.x64       =121F54
+
+[10.0.22468.1000-SLInit]
+bInitialized.x64      =121F2C
+bServerSku.x64        =121F30
+lMaxUserSessions.x64  =121F34
+bAppServerAllowed.x64 =121F3C
+bRemoteConnAllowed.x64=121F44
+bMultimonAllowed.x64  =121F48
+ulMaxDebugSessions.x64=121F50
+bFUSEnabled.x64       =121F54
+
+[10.0.22471.1000-SLInit]
 bInitialized.x64      =121F2C
 bServerSku.x64        =121F30
 lMaxUserSessions.x64  =121F34
