--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,5 +1,6 @@
+
 [Main]
-Updated=2022-01-08
+Updated=2022-01-16
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -1905,58 +1906,6 @@ SLInitHook.x64=1
 SLInitOffset.x64=22C80
 SLInitFunc.x64=New_CSLQuery_Initialize
 
-[10.0.14393.3503]
-LocalOnlyPatch.x86=1
-LocalOnlyOffset.x86=A6528
-LocalOnlyCode.x86=jmpshort
-LocalOnlyPatch.x64=1
-LocalOnlyOffset.x64=8D931
-LocalOnlyCode.x64=jmpshort
-SingleUserPatch.x86=1
-SingleUserOffset.x86=36C65
-SingleUserCode.x86=nop
-SingleUserPatch.x64=1
-SingleUserOffset.x64=1B6A4
-SingleUserCode.x64=Zero
-DefPolicyPatch.x86=1
-DefPolicyOffset.x86=31189
-DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
-DefPolicyPatch.x64=1
-DefPolicyOffset.x64=F185
-DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
-SLInitHook.x86=1
-SLInitOffset.x86=458A2
-SLInitFunc.x86=New_CSLQuery_Initialize
-SLInitHook.x64=1
-SLInitOffset.x64=22C80
-SLInitFunc.x64=New_CSLQuery_Initialize
-
-[10.0.14393.3986]
-LocalOnlyPatch.x86=1
-LocalOnlyOffset.x86=A6578
-LocalOnlyCode.x86=jmpshort
-LocalOnlyPatch.x64=1
-LocalOnlyOffset.x64=8D8A1
-LocalOnlyCode.x64=jmpshort
-SingleUserPatch.x86=1
-SingleUserOffset.x86=36CE5
-SingleUserCode.x86=nop
-SingleUserPatch.x64=1
-SingleUserOffset.x64=1B6A4
-SingleUserCode.x64=Zero
-DefPolicyPatch.x86=1
-DefPolicyOffset.x86=31209
-DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
-DefPolicyPatch.x64=1
-DefPolicyOffset.x64=F185
-DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
-SLInitHook.x86=1
-SLInitOffset.x86=45912
-SLInitFunc.x86=New_CSLQuery_Initialize
-SLInitHook.x64=1
-SLInitOffset.x64=22C80
-SLInitFunc.x64=New_CSLQuery_Initialize
-
 [10.0.14393.3471]
 LocalOnlyPatch.x86=1
 LocalOnlyOffset.x86=A6528
@@ -2004,6 +1953,32 @@ DefPolicyOffset.x64=F185
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x86=1
 SLInitOffset.x86=458A2
+SLInitFunc.x86=New_CSLQuery_Initialize
+SLInitHook.x64=1
+SLInitOffset.x64=22C80
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.14393.3986]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=A6578
+LocalOnlyCode.x86=jmpshort
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8D8A1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=36CE5
+SingleUserCode.x86=nop
+SingleUserPatch.x64=1
+SingleUserOffset.x64=1B6A4
+SingleUserCode.x64=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=31209
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=F185
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x86=1
+SLInitOffset.x86=45912
 SLInitFunc.x86=New_CSLQuery_Initialize
 SLInitHook.x64=1
 SLInitOffset.x64=22C80
@@ -5789,6 +5764,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=276C0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22533.1001]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99401
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=193F2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BEE5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=276C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [SLInit]
 bServerSku=1
 bRemoteConnAllowed=1
@@ -9312,6 +9301,16 @@ ulMaxDebugSessions.x64=121F50
 bFUSEnabled.x64       =121F54
 
 [10.0.22526.1000-SLInit]
+bInitialized.x64      =121F2C
+bServerSku.x64        =121F30
+lMaxUserSessions.x64  =121F34
+bAppServerAllowed.x64 =121F3C
+bRemoteConnAllowed.x64=121F44
+bMultimonAllowed.x64  =121F48
+ulMaxDebugSessions.x64=121F50
+bFUSEnabled.x64       =121F54
+
+[10.0.22533.1001-SLInit]
 bInitialized.x64      =121F2C
 bServerSku.x64        =121F30
 lMaxUserSessions.x64  =121F34
