--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,6 +1,6 @@
 
 [Main]
-Updated=2022-01-16
+Updated=2022-01-24
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4797,6 +4797,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=1E95C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1381]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A021
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1E95C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19041.1387]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8A021
@@ -4822,6 +4836,20 @@ DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
 SLInitHook.x86=1
 SLInitOffset.x86=68778
 SLInitFunc.x86=New_CSLQuery_Initialize
+
+[10.0.19041.1499]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=891F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1DE4C
+SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
@@ -5540,6 +5568,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=26AD0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22000.466]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=992B1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=88C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26D20
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.22449.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=97DD1
@@ -5776,6 +5818,20 @@ DefPolicyOffset.x64=1BEE5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=276C0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22538.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99601
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=19402
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BEF5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=278B0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -8622,6 +8678,16 @@ bMultimonAllowed.x64  =107124
 ulMaxDebugSessions.x64=107128
 bFUSEnabled.x64       =10712C
 
+[10.0.19041.1381-SLInit]
+bInitialized.x64      =107108
+bServerSku.x64        =10710C
+lMaxUserSessions.x64  =107110
+bAppServerAllowed.x64 =107118
+bRemoteConnAllowed.x64=107120
+bMultimonAllowed.x64  =107124
+ulMaxDebugSessions.x64=107128
+bFUSEnabled.x64       =10712C
+
 [10.0.19041.1387-SLInit]
 bInitialized.x64      =107108
 bServerSku.x64        =10710C
@@ -8639,6 +8705,16 @@ bRemoteConnAllowed.x86=D1A1C
 bMultimonAllowed.x86  =D1A20
 ulMaxDebugSessions.x86=D1A24
 bFUSEnabled.x86       =D1A28
+
+[10.0.19041.1499-SLInit]
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =106044
+ulMaxDebugSessions.x64=106048
+bFUSEnabled.x64       =10604C
 
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
@@ -9150,6 +9226,16 @@ bMultimonAllowed.x64  =11FEE8
 ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
+[10.0.22000.466-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
 [10.0.22449.1000-SLInit]
 bInitialized.x64      =11FF0C
 bServerSku.x64        =11FF10
@@ -9311,6 +9397,16 @@ ulMaxDebugSessions.x64=121F50
 bFUSEnabled.x64       =121F54
 
 [10.0.22533.1001-SLInit]
+bInitialized.x64      =121F2C
+bServerSku.x64        =121F30
+lMaxUserSessions.x64  =121F34
+bAppServerAllowed.x64 =121F3C
+bRemoteConnAllowed.x64=121F44
+bMultimonAllowed.x64  =121F48
+ulMaxDebugSessions.x64=121F50
+bFUSEnabled.x64       =121F54
+
+[10.0.22538.1000-SLInit]
 bInitialized.x64      =121F2C
 bServerSku.x64        =121F30
 lMaxUserSessions.x64  =121F34
