--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,6 +1,5 @@
-
 [Main]
-Updated=2022-01-24
+Updated=2022-02-14
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4851,6 +4850,46 @@ SLInitHook.x64=1
 SLInitOffset.x64=1DE4C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1503]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B5BD9
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3BB87
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E639
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=67ACA
+SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=891F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D1E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=190D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1DE4C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1561]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=87CD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C6E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=185D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C9AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8FA01
@@ -5328,6 +5367,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22910
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.502]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=97B31
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=8A32
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B7A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=22B60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21277.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=96FD1
@@ -5582,6 +5635,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=26D20
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22000.469]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=992B1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=088C2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BB75
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26D20
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.22449.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=97DD1
@@ -5821,6 +5888,20 @@ SLInitOffset.x64=276C0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22538.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99601
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=19402
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BEF5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=278B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22543.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=99601
 LocalOnlyCode.x64=jmpshort
@@ -8716,6 +8797,34 @@ bMultimonAllowed.x64  =106044
 ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
 
+[10.0.19041.1503-SLInit]
+bInitialized.x86      =D1954
+bServerSku.x86        =D1958
+lMaxUserSessions.x86  =D195C
+bAppServerAllowed.x86 =D1964
+bRemoteConnAllowed.x86=D196C
+bMultimonAllowed.x86  =D1970
+ulMaxDebugSessions.x86=D1974
+bFUSEnabled.x86       =D1978
+bInitialized.x64      =106028
+bServerSku.x64        =10602C
+lMaxUserSessions.x64  =106030
+bAppServerAllowed.x64 =106038
+bRemoteConnAllowed.x64=106040
+bMultimonAllowed.x64  =106044
+ulMaxDebugSessions.x64=106048
+bFUSEnabled.x64       =10604C
+
+[10.0.19041.1561-SLInit]
+bInitialized.x64      =104FF8
+bServerSku.x64        =104FFC
+lMaxUserSessions.x64  =105000
+bAppServerAllowed.x64 =105008
+bRemoteConnAllowed.x64=105010
+bMultimonAllowed.x64  =105014
+ulMaxDebugSessions.x64=105018
+bFUSEnabled.x64       =10501C
+
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
 bServerSku.x64        =117044
@@ -9056,6 +9165,16 @@ bMultimonAllowed.x64  =11EEC8
 ulMaxDebugSessions.x64=11EED0
 bFUSEnabled.x64       =11EED4
 
+[10.0.20348.502-SLInit]
+bInitialized.x64      =11FEAC
+bServerSku.x64        =11FEB0
+lMaxUserSessions.x64  =11FEB4
+bAppServerAllowed.x64 =11FEBC
+bRemoteConnAllowed.x64=11FEC4
+bMultimonAllowed.x64  =11FEC8
+ulMaxDebugSessions.x64=11FED0
+bFUSEnabled.x64       =11FED4
+
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
 bServerSku.x64        =11EEA0
@@ -9236,6 +9355,16 @@ bMultimonAllowed.x64  =11FEE8
 ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
+[10.0.22000.469-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
 [10.0.22449.1000-SLInit]
 bInitialized.x64      =11FF0C
 bServerSku.x64        =11FF10
@@ -9407,6 +9536,16 @@ ulMaxDebugSessions.x64=121F50
 bFUSEnabled.x64       =121F54
 
 [10.0.22538.1000-SLInit]
+bInitialized.x64      =121F2C
+bServerSku.x64        =121F30
+lMaxUserSessions.x64  =121F34
+bAppServerAllowed.x64 =121F3C
+bRemoteConnAllowed.x64=121F44
+bMultimonAllowed.x64  =121F48
+ulMaxDebugSessions.x64=121F50
+bFUSEnabled.x64       =121F54
+
+[10.0.22543.1000-SLInit]
 bInitialized.x64      =121F2C
 bServerSku.x64        =121F30
 lMaxUserSessions.x64  =121F34
