--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,5 +1,7 @@
+; EarthRDS Terminal Kitapligi
+
 [Main]
-Updated=2022-02-14
+Updated=2022-03-10
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4222,6 +4224,20 @@ SLInitHook.x86=1
 SLInitOffset.x86=61AAA
 SLInitFunc.x86=New_CSLQuery_Initialize
 
+[10.0.17763.2628]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=7E7C1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=13BF9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=187B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=21D3C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18252.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=780B1
@@ -4877,6 +4893,44 @@ SLInitOffset.x64=1DE4C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19041.1561]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B45B9
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3AC17
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3D6C9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=66468
+SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=87CD1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C6E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=185D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C9AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1566]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B45B9
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3AC17
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3D6C9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=66468
+SLInitFunc.x86=New_CSLQuery_Initialize
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=87CD1
 LocalOnlyCode.x64=jmpshort
@@ -5913,6 +5967,62 @@ DefPolicyOffset.x64=1BEF5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=278B0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22557.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9AD11
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08CD2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BDE5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=27AA0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22563.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B771
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08CD2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C155
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28620
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22567.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B741
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08CD2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C155
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=285E0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22572.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B631
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08CD2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C165
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28580
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -8377,6 +8487,16 @@ bMultimonAllowed.x86  =D17D4
 ulMaxDebugSessions.x86=D17D8
 bFUSEnabled.x86       =D17DC
 
+[10.0.17763.2628-SLInit]
+bInitialized.x64      =F3B8C
+bServerSku.x64        =F3B90
+lMaxUserSessions.x64  =F3B94
+bAppServerAllowed.x64 =F3B9C
+bRemoteConnAllowed.x64=F3BA0
+bMultimonAllowed.x64  =F3BA4
+ulMaxDebugSessions.x64=F3BA8
+bFUSEnabled.x64       =F3BAC
+
 [10.0.18252.1000-SLInit]
 bInitialized.x64      =ECAB0
 bServerSku.x64        =ECAB4
@@ -8816,6 +8936,32 @@ ulMaxDebugSessions.x64=106048
 bFUSEnabled.x64       =10604C
 
 [10.0.19041.1561-SLInit]
+bInitialized.x86      =CF920
+bServerSku.x86        =CF924
+lMaxUserSessions.x86  =CF928
+bAppServerAllowed.x86 =CF930
+bRemoteConnAllowed.x86=CF938
+bMultimonAllowed.x86  =CF93C
+ulMaxDebugSessions.x86=CF940
+bFUSEnabled.x86       =CF944
+bInitialized.x64      =104FF8
+bServerSku.x64        =104FFC
+lMaxUserSessions.x64  =105000
+bAppServerAllowed.x64 =105008
+bRemoteConnAllowed.x64=105010
+bMultimonAllowed.x64  =105014
+ulMaxDebugSessions.x64=105018
+bFUSEnabled.x64       =10501C
+
+[10.0.19041.1566-SLInit]
+bInitialized.x86      =CF920
+bServerSku.x86        =CF924
+lMaxUserSessions.x86  =CF928
+bAppServerAllowed.x86 =CF930
+bRemoteConnAllowed.x86=CF938
+bMultimonAllowed.x86  =CF93C
+ulMaxDebugSessions.x86=CF940
+bFUSEnabled.x86       =CF944
 bInitialized.x64      =104FF8
 bServerSku.x64        =104FFC
 lMaxUserSessions.x64  =105000
@@ -9554,3 +9700,43 @@ bRemoteConnAllowed.x64=121F44
 bMultimonAllowed.x64  =121F48
 ulMaxDebugSessions.x64=121F50
 bFUSEnabled.x64       =121F54
+
+[10.0.22557.1-SLInit]
+bInitialized.x64      =127F2C
+bServerSku.x64        =127F30
+lMaxUserSessions.x64  =127F34
+bAppServerAllowed.x64 =127F3C
+bRemoteConnAllowed.x64=127F44
+bMultimonAllowed.x64  =127F48
+ulMaxDebugSessions.x64=127F50
+bFUSEnabled.x64       =127F54
+
+[10.0.22563.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22567.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22572.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
