--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
-; EarthRDS Terminal Kitapligi
+
 
 [Main]
-Updated=2022-03-10
+Updated=2022-03-15
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4480,6 +4480,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=22E9C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.18362.2158]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=83585
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0DD69
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FEB5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2309C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19041.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=87611
@@ -4942,6 +4956,20 @@ DefPolicyOffset.x64=185D5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=1C9AC
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1618]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=877A1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C6E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=185D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C72C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.19613.1000]
@@ -8625,6 +8653,16 @@ bMultimonAllowed.x64  =F6AA4
 ulMaxDebugSessions.x64=F6AA8
 bFUSEnabled.x64       =F6AAC
 
+[10.0.18362.2158-SLInit]
+bInitialized.x64      =F6A8C
+bServerSku.x64        =F6A90
+lMaxUserSessions.x64  =F6A94
+bAppServerAllowed.x64 =F6A9C
+bRemoteConnAllowed.x64=F6AA0
+bMultimonAllowed.x64  =F6AA4
+ulMaxDebugSessions.x64=F6AA8
+bFUSEnabled.x64       =F6AAC
+
 [10.0.18362.1766-SLInit]
 bInitialized.x64      =F6A8C
 bServerSku.x64        =F6A90
@@ -8962,6 +9000,16 @@ bRemoteConnAllowed.x86=CF938
 bMultimonAllowed.x86  =CF93C
 ulMaxDebugSessions.x86=CF940
 bFUSEnabled.x86       =CF944
+bInitialized.x64      =104FF8
+bServerSku.x64        =104FFC
+lMaxUserSessions.x64  =105000
+bAppServerAllowed.x64 =105008
+bRemoteConnAllowed.x64=105010
+bMultimonAllowed.x64  =105014
+ulMaxDebugSessions.x64=105018
+bFUSEnabled.x64       =10501C
+
+[10.0.19041.1618-SLInit]
 bInitialized.x64      =104FF8
 bServerSku.x64        =104FFC
 lMaxUserSessions.x64  =105000
