--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,6 +1,7 @@
 
+
 [Main]
-Updated=2022-03-21
+Updated=2022-03-27
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4971,6 +4972,32 @@ SLInitHook.x64=1
 SLInitOffset.x64=1C72C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1620]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=B4219
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3AC17
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3D6C9
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=66238
+SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=877A1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=C6E2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=185D5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=1C72C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8FA01
@@ -5460,6 +5487,20 @@ DefPolicyOffset.x64=1B7A5
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=22B60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.20348.617]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9A271
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=08B32
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B8A5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26790
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.21277.1000]
@@ -6053,6 +6094,20 @@ SLInitOffset.x64=28580
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22579.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B711
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28600
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22581.1]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=9B711
 LocalOnlyCode.x64=jmpshort
@@ -9032,6 +9087,24 @@ bMultimonAllowed.x64  =105014
 ulMaxDebugSessions.x64=105018
 bFUSEnabled.x64       =10501C
 
+[10.0.19041.1620-SLInit]
+bInitialized.x86      =CF920
+bServerSku.x86        =CF924
+lMaxUserSessions.x86  =CF928
+bAppServerAllowed.x86 =CF930
+bRemoteConnAllowed.x86=CF938
+bMultimonAllowed.x86  =CF93C
+ulMaxDebugSessions.x86=CF940
+bFUSEnabled.x86       =CF944
+bInitialized.x64      =104FF8
+bServerSku.x64        =104FFC
+lMaxUserSessions.x64  =105000
+bAppServerAllowed.x64 =105008
+bRemoteConnAllowed.x64=105010
+bMultimonAllowed.x64  =105014
+ulMaxDebugSessions.x64=105018
+bFUSEnabled.x64       =10501C
+
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
 bServerSku.x64        =117044
@@ -9381,6 +9454,16 @@ bRemoteConnAllowed.x64=11FEC4
 bMultimonAllowed.x64  =11FEC8
 ulMaxDebugSessions.x64=11FED0
 bFUSEnabled.x64       =11FED4
+
+[10.0.20348.617-SLInit]
+bInitialized.x64      =121FAC
+bServerSku.x64        =121FB0
+lMaxUserSessions.x64  =121FB4
+bAppServerAllowed.x64 =121FBC
+bRemoteConnAllowed.x64=121FC4
+bMultimonAllowed.x64  =121FC8
+ulMaxDebugSessions.x64=121FD0
+bFUSEnabled.x64       =121FD4
 
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
@@ -9803,6 +9886,16 @@ ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
 
 [10.0.22579.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22581.1-SLInit]
 bInitialized.x64      =128F2C
 bServerSku.x64        =128F30
 lMaxUserSessions.x64  =128F34
