--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,6 +1,6 @@
 
 [Main]
-Updated=2022-05-09
+Updated=2022-06-04
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4237,6 +4237,34 @@ SLInitHook.x64=1
 SLInitOffset.x64=21D3C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.2931]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=7E7C1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=13BF9
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=187B5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=21D3C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.17763.2989]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A541
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=D099
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FFA5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2C29C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18252.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=780B1
@@ -5035,6 +5063,60 @@ SLInitHook.x64=1
 SLInitOffset.x64=2048C
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.19041.1737]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=941D1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11902
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1EDC5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2910C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1739]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=941D1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11902
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1EDC5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2910C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.19041.1741]
+LocalOnlyPatch.x86=1
+LocalOnlyOffset.x86=C4699
+LocalOnlyCode.x86=jmpshort
+SingleUserPatch.x86=1
+SingleUserOffset.x86=3D257
+SingleUserCode.x86=Zero
+DefPolicyPatch.x86=1
+DefPolicyOffset.x86=3E829
+DefPolicyCode.x86=CDefPolicy_Query_eax_ecx
+SLInitHook.x86=1
+SLInitOffset.x86=71298
+SLInitFunc.x86=New_CSLQuery_Initialize
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=941D1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=11902
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1EDC5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2910C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.19613.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=8FA01
@@ -5554,6 +5636,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=268A0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.740]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99AE1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=8992
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B705
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26400
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21277.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=96FD1
@@ -5834,6 +5930,34 @@ DefPolicyOffset.x64=1BA15
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=26E50
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.653]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=991E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26E50
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22000.708]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=98CB1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18F22
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1BA15
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26C10
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [10.0.22449.1000]
@@ -6240,6 +6364,76 @@ DefPolicyOffset.x64=1C135
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.22621.1]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B7E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25115.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B541
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25120.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B541
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25126.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B561
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25131.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9BAE1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28DF0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -8714,6 +8908,26 @@ bMultimonAllowed.x64  =F3BA4
 ulMaxDebugSessions.x64=F3BA8
 bFUSEnabled.x64       =F3BAC
 
+[10.0.17763.2931-SLInit]
+bInitialized.x64      =F3B8C
+bServerSku.x64        =F3B90
+lMaxUserSessions.x64  =F3B94
+bAppServerAllowed.x64 =F3B9C
+bRemoteConnAllowed.x64=F3BA0
+bMultimonAllowed.x64  =F3BA4
+ulMaxDebugSessions.x64=F3BA8
+bFUSEnabled.x64       =F3BAC
+
+[10.0.17763.2989-SLInit]
+bInitialized.x64      =114D1C
+bServerSku.x64        =114D20
+lMaxUserSessions.x64  =114D24
+bAppServerAllowed.x64 =114D2C
+bRemoteConnAllowed.x64=114D30
+bMultimonAllowed.x64  =114D34
+ulMaxDebugSessions.x64=114D38
+bFUSEnabled.x64       =114D3C
+
 [10.0.18252.1000-SLInit]
 bInitialized.x64      =ECAB0
 bServerSku.x64        =ECAB4
@@ -9262,6 +9476,44 @@ bMultimonAllowed.x64  =107114
 ulMaxDebugSessions.x64=107118
 bFUSEnabled.x64       =10711C
 
+[10.0.19041.1737-SLInit]
+bInitialized.x64      =127164
+bServerSku.x64        =127168
+lMaxUserSessions.x64  =12716C
+bAppServerAllowed.x64 =127174
+bRemoteConnAllowed.x64=12717C
+bMultimonAllowed.x64  =127180
+ulMaxDebugSessions.x64=127184
+bFUSEnabled.x64       =127188
+
+[10.0.19041.1739-SLInit]
+bInitialized.x64      =127164
+bServerSku.x64        =127168
+lMaxUserSessions.x64  =12716C
+bAppServerAllowed.x64 =127174
+bRemoteConnAllowed.x64=12717C
+bMultimonAllowed.x64  =127180
+ulMaxDebugSessions.x64=127184
+bFUSEnabled.x64       =127188
+
+[10.0.19041.1741-SLInit]
+bInitialized.x86      =E5A2C
+bServerSku.x86        =E5A30
+lMaxUserSessions.x86  =E5A34
+bAppServerAllowed.x86 =E5A3C
+bRemoteConnAllowed.x86=E5A44
+bMultimonAllowed.x86  =E5A48
+ulMaxDebugSessions.x86=E5A4C
+bFUSEnabled.x86       =E5A50
+bInitialized.x64      =127164
+bServerSku.x64        =127168
+lMaxUserSessions.x64  =12716C
+bAppServerAllowed.x64 =127174
+bRemoteConnAllowed.x64=12717C
+bMultimonAllowed.x64  =127180
+ulMaxDebugSessions.x64=127184
+bFUSEnabled.x64       =127188
+
 [10.0.19613.1000-SLInit]
 bInitialized.x64      =117040
 bServerSku.x64        =117044
@@ -9632,6 +9884,16 @@ bMultimonAllowed.x64  =121FC8
 ulMaxDebugSessions.x64=121FD0
 bFUSEnabled.x64       =121FD4
 
+[10.0.20348.740-SLInit]
+bInitialized.x64      =121FAC
+bServerSku.x64        =121FB0
+lMaxUserSessions.x64  =121FB4
+bAppServerAllowed.x64 =121FBC
+bRemoteConnAllowed.x64=121FC4
+bMultimonAllowed.x64  =121FC8
+ulMaxDebugSessions.x64=121FD0
+bFUSEnabled.x64       =121FD4
+
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
 bServerSku.x64        =11EEA0
@@ -9823,6 +10085,26 @@ ulMaxDebugSessions.x64=11FEF0
 bFUSEnabled.x64       =11FEF4
 
 [10.0.22000.652-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
+[10.0.22000.653-SLInit]
+bInitialized.x64      =11FECC
+bServerSku.x64        =11FED0
+lMaxUserSessions.x64  =11FED4
+bAppServerAllowed.x64 =11FEDC
+bRemoteConnAllowed.x64=11FEE4
+bMultimonAllowed.x64  =11FEE8
+ulMaxDebugSessions.x64=11FEF0
+bFUSEnabled.x64       =11FEF4
+
+[10.0.22000.708-SLInit]
 bInitialized.x64      =11FECC
 bServerSku.x64        =11FED0
 lMaxUserSessions.x64  =11FED4
@@ -10113,6 +10395,56 @@ ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
 
 [10.0.22616.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.22621.1-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.25115.1000-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.25120.1000-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.25126.1000-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
+[10.0.25131.1000-SLInit]
 bInitialized.x64      =128F2C
 bServerSku.x64        =128F30
 lMaxUserSessions.x64  =128F34
