--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,10 +1,8 @@
-; RDP Wrapper Library configuration
-; Do not modify without special knowledge
-; Edited by sebaxakerhtc
+
 
 [Main]
 Updated=2022-07-02
-LogFile=\rdpwrap.txt
+LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
 
