--- a/earthterminal.ini
+++ b/earthterminal.ini
@@ -1,7 +1,7 @@
 
 
 [Main]
-Updated=2022-07-02
+Updated=2022-07-25
 LogFile=\earthterminal.txt
 SLPolicyHookNT60=1
 SLPolicyHookNT61=1
@@ -4294,6 +4294,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=2C0AC
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.17763.3232]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=8A5F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=0D099
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1FFA5
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=2C29C
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.18252.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=780B1
@@ -5679,6 +5693,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=26400
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.20348.859]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=99E61
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=8992
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1B705
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=26660
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.21277.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=96FD1
@@ -6409,6 +6437,20 @@ SLInitHook.x64=1
 SLInitOffset.x64=286D0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
+[10.0.22621.436]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B7E1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=186B2
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C135
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=286D0
+SLInitFunc.x64=New_CSLQuery_Initialize
+
 [10.0.25115.1000]
 LocalOnlyPatch.x64=1
 LocalOnlyOffset.x64=9B541
@@ -6519,6 +6561,34 @@ DefPolicyOffset.x64=1C855
 DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
 SLInitHook.x64=1
 SLInitOffset.x64=28F60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25158.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B961
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28F60
+SLInitFunc.x64=New_CSLQuery_Initialize
+
+[10.0.25163.1000]
+LocalOnlyPatch.x64=1
+LocalOnlyOffset.x64=9B6F1
+LocalOnlyCode.x64=jmpshort
+SingleUserPatch.x64=1
+SingleUserOffset.x64=18D12
+SingleUserCode.x64=Zero
+DefPolicyPatch.x64=1
+DefPolicyOffset.x64=1C855
+DefPolicyCode.x64=CDefPolicy_Query_eax_rcx
+SLInitHook.x64=1
+SLInitOffset.x64=28EB0
 SLInitFunc.x64=New_CSLQuery_Initialize
 
 [SLInit]
@@ -9033,6 +9103,16 @@ bMultimonAllowed.x64  =114D34
 ulMaxDebugSessions.x64=114D38
 bFUSEnabled.x64       =114D3C
 
+[10.0.17763.3232-SLInit]
+bInitialized.x64      =115D1C
+bServerSku.x64        =115D20
+lMaxUserSessions.x64  =115D24
+bAppServerAllowed.x64 =115D2C
+bRemoteConnAllowed.x64=115D30
+bMultimonAllowed.x64  =115D34
+ulMaxDebugSessions.x64=115D38
+bFUSEnabled.x64       =115D3C
+
 [10.0.18252.1000-SLInit]
 bInitialized.x64      =ECAB0
 bServerSku.x64        =ECAB4
@@ -9999,6 +10079,16 @@ bMultimonAllowed.x64  =121FC8
 ulMaxDebugSessions.x64=121FD0
 bFUSEnabled.x64       =121FD4
 
+[10.0.20348.859-SLInit]
+bInitialized.x64      =121FAC
+bServerSku.x64        =121FB0
+lMaxUserSessions.x64  =121FB4
+bAppServerAllowed.x64 =121FBC
+bRemoteConnAllowed.x64=121FC4
+bMultimonAllowed.x64  =121FC8
+ulMaxDebugSessions.x64=121FD0
+bFUSEnabled.x64       =121FD4
+
 [10.0.21277.1000-SLInit]
 bInitialized.x64      =11EE9C
 bServerSku.x64        =11EEA0
@@ -10519,6 +10609,16 @@ bMultimonAllowed.x64  =128F48
 ulMaxDebugSessions.x64=128F50
 bFUSEnabled.x64       =128F54
 
+[10.0.22621.436-SLInit]
+bInitialized.x64      =128F2C
+bServerSku.x64        =128F30
+lMaxUserSessions.x64  =128F34
+bAppServerAllowed.x64 =128F3C
+bRemoteConnAllowed.x64=128F44
+bMultimonAllowed.x64  =128F48
+ulMaxDebugSessions.x64=128F50
+bFUSEnabled.x64       =128F54
+
 [10.0.25115.1000-SLInit]
 bInitialized.x64      =128F2C
 bServerSku.x64        =128F30
@@ -10598,3 +10698,23 @@ bRemoteConnAllowed.x64=128F64
 bMultimonAllowed.x64  =128F68
 ulMaxDebugSessions.x64=128F70
 bFUSEnabled.x64       =128F74
+
+[10.0.25158.1000-SLInit]
+bInitialized.x64      =128F4C
+bServerSku.x64        =128F50
+lMaxUserSessions.x64  =128F54
+bAppServerAllowed.x64 =128F5C
+bRemoteConnAllowed.x64=128F64
+bMultimonAllowed.x64  =128F68
+ulMaxDebugSessions.x64=128F70
+bFUSEnabled.x64       =128F74
+
+[10.0.25163.1000-SLInit]
+bInitialized.x64      =127F4C
+bServerSku.x64        =127F50
+lMaxUserSessions.x64  =127F54
+bAppServerAllowed.x64 =127F5C
+bRemoteConnAllowed.x64=127F64
+bMultimonAllowed.x64  =127F68
+ulMaxDebugSessions.x64=127F70
+bFUSEnabled.x64       =127F74
